--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       <ul class="context">
         <li>
           <div class="box">
-            <img
-              src="https://hexschool.github.io/flexImgUrl/2/logo.png"
-              alt="logo"
-            />
+            <img src="https://reurl.cc/70YrGl" alt="logo" />
           </div>
         </li>
         <li>
