--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <ul class="context">
         <li>
           <div class="box">
-            <img src="https://reurl.cc/70YrGl" alt="logo" />
+            <img
+              src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse2-Logo.png?alt=media&token=e0247ac0-76f4-4146-aff1-393fb6d7f41d"
+              alt="logo"
+            />
           </div>
         </li>
         <li>
